[package]
name = "wasm-lib-wishlist"
version = "0.1.0"
authors = ["Elad Yosifon"]
edition = "2019"


[lib]
crate-type = ["cdylib"]

[features]
#default = ["console_error_panic_hook"]
#default = ["wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

lazy_static = "1.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
opt-level = 'z'
